fix some spacing issues

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -5,6 +5,7 @@
 
 
 .navigation-wrapper {
+  z-index: 20;
   text-align: center;
   position: fixed;
   width: 100%;
@@ -27,7 +28,7 @@
     float: left;
     list-style: none;
     text-align: center;
-    @include font-size(24,no);
+    @include font-size(14,no);
     text-transform: uppercase;
     color: $white;
     @include media($medium) {
@@ -40,7 +41,7 @@
   a {
     display: block;
     margin-bottom: 10px;
-    padding: 12px 20px;
+    padding: 5px 10px;
     @include media($medium) {
       margin-bottom: 0;
       padding: 6px 10px;
@@ -59,7 +60,7 @@
 
 #site-nav {
   display: none;
-  z-index: 5;
+  z-index: 20;
   @include media($medium) {
     -webkit-animation-duration: 1s;
     -moz-animation-duration: 1s;
@@ -85,6 +86,7 @@
 
 /* display when JavaScript is disabled */
 .no-js #site-nav {
+  z-index:20;
   display: block;
 }
 
