--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -20,14 +20,13 @@
 /* feature image */
 
 .entry-feature-image {
-	margin: -200px 0 0 0;
+	margin: -200px 0 0 0; /* move up to be overlapped by site logo */
 	width: 100%;
 	@include media($medium) {
 		margin-top: -280px; /* move up to be overlapped by site logo */
 	}
 	@include media($large) {
 		margin-top: -350px; /* move up further to be overlapped by site logo */
-		
 	}
 }
 
@@ -56,14 +55,15 @@ span + .entry-title {
 	margin-top: 0;
 }
 
-.entry-title {
+.entry-title,
+.entry-post-title {
 	font-family: $alt-font;
 	font-style: italic;
 	@include font-size(30,yes,30);
 	font-weight: 400;
 	line-height: 1;
 	letter-spacing: -3px;
-	margin-top: 1.2em;
+	margin-top: 2em;
 	a {
 		color: $black;
 		text-decoration: underline;
@@ -74,6 +74,14 @@ span + .entry-title {
 	@include media($large) {
 		@include font-size(50,yes,54);
 	}
+}
+
+.entry-title{
+  margin-top: 1.2em
+}
+
+.entry-post-title{
+  margin-top: 2em
 }
 
 /* page/post wrapper */
